--- a/next-store/package.json
+++ b/next-store/package.json
@@ -30,7 +30,8 @@
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.2"
+    "use-debounce": "^10.0.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
