--- a/next-store/.env.example
+++ b/next-store/.env.example
@@ -1,2 +1,9 @@
 DATABASE_URL="<YOUR_TRANSACTION_URL_FROM_SUPABASE>"
 DIRECT_URL="<YOUR_SESSION_URL_FROM_SUPABASE>"
+
+ADMIN_USER_ID=<USERID_FOR_ADMIN_USER>
+
+SUPABASE_URL=<YOUR_SUPABASE_URL>
+SUPABASE_KEY=<YOUR_SUPABASE_PUBLIC_KEY>
+
+NEXT_PUBLIC_WEBSITE_URL="<VERCEL_URL>"
