--- a/next-store/.env.example
+++ b/next-store/.env.example
@@ -7,3 +7,6 @@ SUPABASE_URL=<YOUR_SUPABASE_URL>
 SUPABASE_KEY=<YOUR_SUPABASE_PUBLIC_KEY>
 
 NEXT_PUBLIC_WEBSITE_URL="<VERCEL_URL>"
+
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=<STRIPE_PUBLISHABLE_KEY>
+STRIPE_SECRET_KEY=<STRIPE_SECRET_KEY>
